--- a/Breakout game/styles.css
+++ b/Breakout game/styles.css
@@ -1,6 +1,7 @@
 .grid {
+  margin-top: 200px;
   position: absolute;
-  width: 600px;
+  width: 560px;
   height: 300px;
   border: solid black 3px;
 }
@@ -9,5 +10,20 @@
   width: 100px;
   height: 20px;
   background: greenyellow;
-  
+}
+.user {
+  position: absolute;
+  width: 100px;
+  height: 20px;
+  background: rgb(255, 224, 47);
+}
+.ball {
+  position: absolute;
+  background-color: brown;
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+}
+.score {
+ 
 }
